<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    	<Preference android:title="@string/label_rebootaf" android:key="mess" android:summary="@string/nosum" style="?android:preferenceInformationStyle" />
	<CheckBoxPreference
	    android:key="key_dataw"
	    android:title="@string/label_dataw"
	    android:summary="@string/sum_dataw"
	    android:defaultValue="false" />
	    <CheckBoxPreference
	    android:key="key_datawkk"
	    android:title="@string/label_datawkk"
	    android:summary="@string/sum_datawkk"
	    android:defaultValue="false" />
	    <CheckBoxPreference
	    android:key="key_btw"
	    android:title="@string/label_btw"
	    android:summary="@string/sum_btw"
	    android:defaultValue="false" />
	    <CheckBoxPreference
	    android:key="key_btwapn"
	    android:title="@string/label_btwapn"
	    android:summary="@string/sum_btwapn"
	    android:defaultValue="false" />
	    <CheckBoxPreference
	    android:key="key_battery"
	    android:title="@string/label_battery"
	    android:summary="@string/sum_battery"
	    android:defaultValue="false" />
	    <EditTextPreference 
	    android:defaultValue="30" 
	    android:key="key_app_num" 
	    android:title="@string/label_app_num"
	    android:summary="@string/sum_app_num"
	    android:dependency="key_battery"
	    android:inputType="number"
	    />

	
	<Preference android:key="mes" android:title="@string/app_name" android:summary="@string/mesum">
            <intent android:action="android.intent.action.VIEW"
             android:data="http://androplus.kagome-kagome.com/" />
        </Preference>
</PreferenceScreen>